add animations and features

--- a/css/phone.css
+++ b/css/phone.css
@@ -13,6 +13,11 @@
     padding-left: 220px;
    padding-top: -200px;
 }
+#home h2 span {
+    font-size: xx-small;
+    font-weight: 100;
+
+}
 
   
 #home{
