--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 
 }
+
+
 /* Navigation bar section*/
 .hamburger{
     display: none;
@@ -93,6 +95,114 @@
     top: 20%;
     left: 3%;
 }
+#home h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   font-size: 40px;
+   margin-left: -10px;
+   color: transparent;
+   -webkit-text-stroke: 1px #fff;
+   background:url(back.png);
+   -webkit-background-clip: text;
+   background-position: 0 0 ;
+   animation: back 20s linear infinite;
+}
+@keyframes back{
+    100%{
+        background-position: 4000px 0 ;
+    }
+}
+
+#home h2{
+    font-family: sans-serif;
+    margin-left: 60%;
+    margin-bottom: 40%;
+}
+#home h2 span {
+    position: relative;
+    top: 20px;
+    display: inline-block;
+    -webkit-animation: bounce 0.3s ease infinite alternate;
+    font-size: 80px;
+    color: #fff;
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc,
+      0 5px 0 #ccc, 0 6px 0 transparent, 0 7px 0 transparent, 0 8px 0 transparent,
+      0 9px 0 transparent, 0 10px 10px rgba(0, 0, 0, 0.4);
+  }
+
+  #home h2 span:nth-child(2) {
+    -webkit-animation-delay: 0.1s;
+  }
+ #home h2 span:nth-child(2) {
+    -webkit-animation-delay: 0.1s;
+  }
+  
+ #home h2 span:nth-child(3) {
+    -webkit-animation-delay: 0.2s;
+  }
+  
+  #home  h2 span:nth-child(4) {
+    -webkit-animation-delay: 0.3s;
+  }
+  
+  #home h2 span:nth-child(5) {
+    -webkit-animation-delay: 0.4s;
+  }
+  
+  #home h2 span:nth-child(6) {
+    -webkit-animation-delay: 0.5s;
+  }
+  
+  #home h2 span:nth-child(7) {
+    -webkit-animation-delay: 0.6s;
+  }
+  
+  #home h2 span:nth-child(8) {
+    -webkit-animation-delay: 0.2s;
+  }
+  
+ #home h2 span:nth-child(9) {
+    -webkit-animation-delay: 0.3s;
+  }
+  
+ #home h2 span:nth-child(10) {
+    -webkit-animation-delay: 0.4s;
+  }
+  
+  #home h2 span:nth-child(11) {
+    -webkit-animation-delay: 0.5s;
+  }
+  
+  #home h2 span:nth-child(12) {
+    -webkit-animation-delay: 0.6s;
+  }
+  
+  #home h2 span:nth-child(13) {
+    -webkit-animation-delay: 0.7s;
+  }
+  
+ #home h2 span:nth-child(14) {
+    -webkit-animation-delay: 0.8s;
+  }
+  #home h2 span:nth-child(15) {
+    -webkit-animation-delay: 0.9s;
+  }
+  #home h2 span:nth-child(16) {
+    -webkit-animation-delay: 1.0s;
+  }
+  
+  /* ANIMATION */
+  @-webkit-keyframes bounce {
+    100% {
+      top: -20px;
+      text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc,
+        0 5px 0 #ccc, 0 6px 0 #ccc, 0 7px 0 #ccc, 0 8px 0 #ccc, 0 9px 0 #ccc,
+        0 50px 25px rgba(0, 0, 0, 0.2);
+    }
+  }
+  
+
+
+
 
 .headings{
     font-family: century;
@@ -192,6 +302,129 @@
     width:300px;
   
 }
+
+.antena-left{
+    width: 7px;
+    height: 4rem;
+    background-color: rgb(164,198,57);
+    transform: rotate(340deg);
+    position:absolute;
+    left: 6rem;
+    top: -3rem;
+    border-radius: 12px;
+}
+.antena-right{
+    width: 7px;
+    height:4rem;
+    background-color: rgb(164,198,57);
+    transform: rotate(23deg);
+    position:absolute;
+    right: 6rem;
+    top: -3rem;
+    border-radius: 12px;
+}
+
+.and-body{
+    width: 17rem;
+    height: 17rem;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.body-center{
+    width: 9rem;
+    height: 8rem;
+    background-color:rgb(164,198,57);
+    border-radius: 2px 2px 16px 16px;
+    top: 62px;
+}
+.hand-left{
+    width:2rem;
+    height: 7rem;
+    background-color: rgb(164,198,57);
+    position: absolute;
+    left: 27px;
+    top: 64px;
+    border-radius: 22px;
+}
+.hand-right{
+    width:2rem;
+    height: 7rem;
+    background-color: rgb(164,198,57);;
+    position: absolute;
+    right:27px;
+    top: 64px;
+    border-radius: 22px;
+}
+
+.bottom-left{
+    width: 2rem;
+    height: 4rem;
+    background-color: rgb(164,198,57);
+    position: absolute;
+    left: 86px;
+    top: 174px;
+    border-radius: 22px;
+}
+.bottom-right{
+    width: 2rem;
+    height: 4rem;
+    background-color: rgb(164,198,57);
+    position: absolute;
+    right: 86px;
+    top: 174px;
+    border-radius: 22px;
+}
+
+
+
+.head-top{
+    position:absolute;
+    top: -21px;
+    width: 9rem;
+    height: 5rem;
+    display: flex;
+    background-color: rgb(164,198,57);
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 75px 77px 6px 6px;
+}
+
+.head-top .eyes-1{
+    width: 17px;
+    height: 0px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.6);
+    animation: eyesanimation 0.5s linear infinite;
+}
+.head-top .eyes-2{
+    width: 17px;
+    height: 0px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.6);
+    animation: eyesanimation 0.5s linear infinite;
+}
+@keyframes eyesanimation{
+    0%, 100%{
+        height: 17px;
+    }
+    20%{
+        height: 17px;
+    }
+    40%{
+        height: 17px;
+    }
+    60%{
+        height: 17px;
+    }
+    80%{
+        height: 0px;
+    }
+}
+
+
 
 
 
